syntax = "proto3";

import "corfu_options.proto";
package org.corfudb.infrastructure.logreplication.proto;

message StringKey {
    string key = 1;
}

message IntValue {
    int32 value = 2;
}

message IntValueTag {
    option (org.corfudb.runtime.table_schema).stream_tag = "test";
    int32 value = 2;
}

message Metadata {
    string metadata = 3;
}